2009-06-05  Sebastien Pouliot  <sebastien@ximian.com>

	* WebClient_2_1.cs: Make sure *CompletedEventArgs gets called 
	even in case an exception occurs before the BeginGetResponse 
	call. Adjust API for OpenReadCompletedEventArgs.

2009-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* WebClient_2_1.cs: Remove the creation of threads and use the
	async methods provided by WebRequest (and its friends). Use an
	internal object to lock on (not this). Remove comments from the
	original (mono) WebClient since the code has diverged so much.
	Fix DRT#326 (hopefully others too or at least more than it breaks)

2009-06-01  Sebastien Pouliot  <sebastien@ximian.com>

	* HttpWebRequest_2_1.cs: Avoid possible NRE while settings a
	complete collection.
	* WebResponse_2_1.cs: Use StringComparer.OrdinalIgnoreCase on 
	the prefix Dictionary

2009-05-26  Sebastien Pouliot  <sebastien@ximian.com>

	* WebClient_2_1.cs: Add internal WebHeaderCollection. Change
	signature for OpenPolicyReadAsync to take an addtional object
	* WebResponse_2_1.cs: Add internal WebHeaderCollection

2009-05-22  Sebastien Pouliot  <sebastien@ximian.com>

	* WebClient_2_1.cs: Add an internal OpenPolicyReadAsync. Check 
	result in ProcessResponse and throw if not Ok (200).
	* WebRequest_2_1.cs: Add an internal overload to BeginGetResponse
	from where we can handle downloading the policy.

2009-05-14  Sebastien Pouliot  <sebastien@ximian.com>

	* DnsEndPoint_2_1.cs: Add method to return an IPEndPoint from a
	DnsEndPoint that match the requested AddressFamily

2009-05-12  Sebastien Pouliot  <sebastien@ximian.com>

	* WebHeaderCollection_2_1.cs: Headers are case insensitive but we
	must keep them in their original form since AllKeys property will
	report them that way and user code (like DRT#288) can depends on
	this behavior.

2009-05-11  Sebastien Pouliot  <sebastien@ximian.com>

	* WebHeaderCollection_2_1.cs: Headers are removed only in special